--- a/programming-task-2023/1. Noticias España/langchain_prueba.ipynb
+++ b/programming-task-2023/1. Noticias España/langchain_prueba.ipynb
@@ -2,15 +2,369 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-08-12T18:12:42.499314Z",
+     "start_time": "2023-08-12T18:12:41.692038Z"
+    }
    },
    "outputs": [],
    "source": [
-    "export OPENAI_API_KEY=\"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\""
+    "# Imports \n",
+    "from langchain.llms import OpenAI\n",
+    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain import PromptTemplate, LLMChain\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "import time"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Primera prueba\n",
+    "Utilizando la forma de chatbot, le pregunte a chatgpt cuál era el código INE del municipio seleccionado o al revés (cuál era el INEcode del municipio). \n",
+    "No se tuvo buenos resultados. En algunos casos, nos daba un municipio distinto y en otro se quedaba con la provincia."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "9cb02ef6e19992f3"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'El código INE del municipio de Agurain/Salvatierra, en España, es el 01002.'"
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "llm = OpenAI(openai_api_key=\"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\" , temperature = 0)\n",
+    "\n",
+    "chat_model = ChatOpenAI(openai_api_key=\"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\", model_name=\"gpt-3.5-turbo\")\n",
+    "\n",
+    "# The correct answer is \"01051\"\n",
+    "text = \"\"\"Cuál es el código INE del municipio de España llamado \"Agurain/Salvatierra\"\"\"\n",
+    "llm.predict(text)\n",
+    "\n",
+    "chat_model.predict(text)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-12T18:00:01.486749500Z",
+     "start_time": "2023-08-12T17:59:57.770760500Z"
+    }
+   },
+   "id": "823eafa4329f0675"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Para probar que efectivamente funciona, le pregunté algo más sencillo (al menos a mi conocimiento). Le pedí la dirección de la CCL y lo hizo parcialmente bien (se equivocó en el distrito, pero la dirección la dio de manera correcta."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "f2b23ae62787d341"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'La Cámara de Comercio de Lima está ubicada en el distrito de San Isidro, en la ciudad de Lima, Perú. Su dirección exacta es Avenida Giuseppe Garibaldi 396, San Isidro.'"
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The correct answer is \"Av Giuseppe Garibaldi 396, Jesús María 15072 Lima - Perú\"\n",
+    "text = \"Dónde está ubicada la Cámara de Comercio de Lima?\"\n",
+    "\n",
+    "llm.predict(text)\n",
+    "\n",
+    "chat_model.predict(text)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-12T17:28:39.075112900Z",
+     "start_time": "2023-08-12T17:28:34.573386900Z"
+    }
+   },
+   "id": "669ec1de2de2cfb0"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "\"El municipio de España con código INEcode '50231' se llama Zaragoza.\""
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The correct answer is \"Salillas de Jalón\"\n",
+    "text = \"\"\"Cómo se llama el municipio de España con código INEcode '50231'. \n",
+    "El INEcode es el código que da el INE a cada municipio.\n",
+    "El INE es el Instituto Nacional de Estadística de España.\n",
+    "El INEcode es un código de cinco dígitos que identifica a cada municipio en España.\"\"\"\n",
+    "llm.predict(text)\n",
+    "\n",
+    "chat_model.predict(text)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-12T17:32:49.699585200Z",
+     "start_time": "2023-08-12T17:32:47.535344900Z"
+    }
+   },
+   "id": "45bda0b513ed6c91"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "\"El municipio de España con código INE '50231' se llama Villanueva de Gállego.\""
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The correct answer is \"Salillas de Jalón\"\n",
+    "text = \"\"\"Cómo se llama el municipio de España con código INEcode '50231'\"\"\"\n",
+    "llm.predict(text)\n",
+    "\n",
+    "chat_model.predict(text)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-12T17:35:46.447302800Z",
+     "start_time": "2023-08-12T17:35:44.317023300Z"
+    }
+   },
+   "id": "c6784d6a4fc5244c"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Segunda prueba\n",
+    "En la documentación, observé que también había la forma de establecer un modelo de respuesta, de tal forma que estructure mejor la respuesta que da ChatGPT. \n",
+    "Sin embargo, también falla de igual forma que en la prueba anterior. Le hice la pregunta \"placebo\" y también falló. Por lo cual, no creo que nos pueda servir esta forma de pregunta-respuesta"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e4367caf507b8a24"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "outputs": [],
+   "source": [
+    "template = \"\"\"Question: {question}\n",
+    "\n",
+    "Answer: Let's think step by step.\"\"\"\n",
+    "\n",
+    "prompt = PromptTemplate(template=template, input_variables=[\"question\"])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-12T18:09:21.791461100Z",
+     "start_time": "2023-08-12T18:09:21.775836900Z"
+    }
+   },
+   "id": "86df9a29280a4b41"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "\" First, INE is the abbreviation for Instituto Nacional de Estadística, which is the national statistics institute in Spain. Next, '01051' is the code for a municipality in Spain. Finally, the municipality with the code INE '01051' is La Oliva in the province of Las Palmas in the Canary Islands.\""
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "llm = OpenAI(openai_api_key=\"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\")\n",
+    "\n",
+    "llm_chain = LLMChain(prompt=prompt, llm=llm)\n",
+    "\n",
+    "# The correct answer is \"Agurain/Salvatierra\"\n",
+    "question = \"Cómo se llama el municipio de España con código INE '01051'\"\n",
+    "\n",
+    "llm_chain.run(question)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-12T18:09:24.794221800Z",
+     "start_time": "2023-08-12T18:09:22.790545600Z"
+    }
+   },
+   "id": "cc05fc9136a98b0"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "' First, we need to find the website of the Chamber of Commerce of Lima. A quick Google search reveals that the website is www.camaralima.org.pe. The address of the Chamber of Commerce of Lima is Avenida Jorge Basadre 590, San Isidro, Lima, Peru.'"
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "question = \"Cuál es la dirección de la Cámara de Comercio de Lima?\"\n",
+    "\n",
+    "llm_chain.run(question)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-12T18:10:40.400327600Z",
+     "start_time": "2023-08-12T18:10:38.624183800Z"
+    }
+   },
+   "id": "e8853dc70c00c759"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Tercera prueba - https://python.langchain.com/docs/use_cases/question_answering/#quickstart\n",
+    "Revisando la documentación de Uses Cases de Langchain, vi que esta podría ser una forma de aproximarse a la data de las noticias con las que tenemos"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "dd504b0f1c7deb47"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "outputs": [],
+   "source": [
+    "# Imports\n",
+    "from langchain.document_loaders import DataFrameLoader\n",
+    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
+    "from langchain.embeddings import OpenAIEmbeddings\n",
+    "from langchain.vectorstores import Chroma"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-12T18:26:56.600688200Z",
+     "start_time": "2023-08-12T18:26:56.594444400Z"
+    }
+   },
+   "id": "2d40d81f22cc1b32"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "outputs": [],
+   "source": [
+    "# 1. Load\n",
+    "os.chdir(\"D:/1. Documentos/0. Bases de datos/0. Dofiles y Scripts/CNH-GitHub/programming-task-2023/1. Noticias España\")\n",
+    "df_completa = pd.read_excel(\"test_440_news_v11.xlsx\")\n",
+    "df = df_completa.head(3)\n",
+    "\n",
+    "loader = DataFrameLoader(df,page_content_column='news_complete')\n",
+    "data = loader.load()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-12T18:25:35.437435Z",
+     "start_time": "2023-08-12T18:25:34.600472600Z"
+    }
+   },
+   "id": "a581fa7f05b44723"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "outputs": [],
+   "source": [
+    "# 2. Split\n",
+    "text_splitter = RecursiveCharacterTextSplitter(chunk_size = 500, chunk_overlap = 0)\n",
+    "all_splits = text_splitter.split_documents(data)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-12T18:26:31.563245900Z",
+     "start_time": "2023-08-12T18:26:31.544379300Z"
+    }
+   },
+   "id": "3280e30cd6036f0"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Could not import chromadb python package. Please install it with `pip install chromadb`.",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "File \u001B[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\langchain\\vectorstores\\chroma.py:81\u001B[0m, in \u001B[0;36mChroma.__init__\u001B[1;34m(self, collection_name, embedding_function, persist_directory, client_settings, collection_metadata, client, relevance_score_fn)\u001B[0m\n\u001B[0;32m     80\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[1;32m---> 81\u001B[0m     \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mchromadb\u001B[39;00m\n\u001B[0;32m     82\u001B[0m     \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mchromadb\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mconfig\u001B[39;00m\n",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'chromadb'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001B[1;31mValueError\u001B[0m                                Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[78], line 2\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;66;03m# 3. Store\u001B[39;00m\n\u001B[1;32m----> 2\u001B[0m vectorstore \u001B[38;5;241m=\u001B[39m \u001B[43mChroma\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mfrom_documents\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdocuments\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mall_splits\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43membedding\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mOpenAIEmbeddings\u001B[49m\u001B[43m(\u001B[49m\u001B[43mopenai_api_key\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43msk-dHcL2e4kD94pPljDX4APT3BlbkFJim01oXldm27jCApbGBuE\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\langchain\\vectorstores\\chroma.py:613\u001B[0m, in \u001B[0;36mChroma.from_documents\u001B[1;34m(cls, documents, embedding, ids, collection_name, persist_directory, client_settings, client, collection_metadata, **kwargs)\u001B[0m\n\u001B[0;32m    611\u001B[0m texts \u001B[38;5;241m=\u001B[39m [doc\u001B[38;5;241m.\u001B[39mpage_content \u001B[38;5;28;01mfor\u001B[39;00m doc \u001B[38;5;129;01min\u001B[39;00m documents]\n\u001B[0;32m    612\u001B[0m metadatas \u001B[38;5;241m=\u001B[39m [doc\u001B[38;5;241m.\u001B[39mmetadata \u001B[38;5;28;01mfor\u001B[39;00m doc \u001B[38;5;129;01min\u001B[39;00m documents]\n\u001B[1;32m--> 613\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mcls\u001B[39m\u001B[38;5;241m.\u001B[39mfrom_texts(\n\u001B[0;32m    614\u001B[0m     texts\u001B[38;5;241m=\u001B[39mtexts,\n\u001B[0;32m    615\u001B[0m     embedding\u001B[38;5;241m=\u001B[39membedding,\n\u001B[0;32m    616\u001B[0m     metadatas\u001B[38;5;241m=\u001B[39mmetadatas,\n\u001B[0;32m    617\u001B[0m     ids\u001B[38;5;241m=\u001B[39mids,\n\u001B[0;32m    618\u001B[0m     collection_name\u001B[38;5;241m=\u001B[39mcollection_name,\n\u001B[0;32m    619\u001B[0m     persist_directory\u001B[38;5;241m=\u001B[39mpersist_directory,\n\u001B[0;32m    620\u001B[0m     client_settings\u001B[38;5;241m=\u001B[39mclient_settings,\n\u001B[0;32m    621\u001B[0m     client\u001B[38;5;241m=\u001B[39mclient,\n\u001B[0;32m    622\u001B[0m     collection_metadata\u001B[38;5;241m=\u001B[39mcollection_metadata,\n\u001B[0;32m    623\u001B[0m     \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs,\n\u001B[0;32m    624\u001B[0m )\n",
+      "File \u001B[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\langchain\\vectorstores\\chroma.py:568\u001B[0m, in \u001B[0;36mChroma.from_texts\u001B[1;34m(cls, texts, embedding, metadatas, ids, collection_name, persist_directory, client_settings, client, collection_metadata, **kwargs)\u001B[0m\n\u001B[0;32m    535\u001B[0m \u001B[38;5;129m@classmethod\u001B[39m\n\u001B[0;32m    536\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mfrom_texts\u001B[39m(\n\u001B[0;32m    537\u001B[0m     \u001B[38;5;28mcls\u001B[39m: Type[Chroma],\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m    547\u001B[0m     \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs: Any,\n\u001B[0;32m    548\u001B[0m ) \u001B[38;5;241m-\u001B[39m\u001B[38;5;241m>\u001B[39m Chroma:\n\u001B[0;32m    549\u001B[0m     \u001B[38;5;124;03m\"\"\"Create a Chroma vectorstore from a raw documents.\u001B[39;00m\n\u001B[0;32m    550\u001B[0m \n\u001B[0;32m    551\u001B[0m \u001B[38;5;124;03m    If a persist_directory is specified, the collection will be persisted there.\u001B[39;00m\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m    566\u001B[0m \u001B[38;5;124;03m        Chroma: Chroma vectorstore.\u001B[39;00m\n\u001B[0;32m    567\u001B[0m \u001B[38;5;124;03m    \"\"\"\u001B[39;00m\n\u001B[1;32m--> 568\u001B[0m     chroma_collection \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mcls\u001B[39m(\n\u001B[0;32m    569\u001B[0m         collection_name\u001B[38;5;241m=\u001B[39mcollection_name,\n\u001B[0;32m    570\u001B[0m         embedding_function\u001B[38;5;241m=\u001B[39membedding,\n\u001B[0;32m    571\u001B[0m         persist_directory\u001B[38;5;241m=\u001B[39mpersist_directory,\n\u001B[0;32m    572\u001B[0m         client_settings\u001B[38;5;241m=\u001B[39mclient_settings,\n\u001B[0;32m    573\u001B[0m         client\u001B[38;5;241m=\u001B[39mclient,\n\u001B[0;32m    574\u001B[0m         collection_metadata\u001B[38;5;241m=\u001B[39mcollection_metadata,\n\u001B[0;32m    575\u001B[0m         \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs,\n\u001B[0;32m    576\u001B[0m     )\n\u001B[0;32m    577\u001B[0m     chroma_collection\u001B[38;5;241m.\u001B[39madd_texts(texts\u001B[38;5;241m=\u001B[39mtexts, metadatas\u001B[38;5;241m=\u001B[39mmetadatas, ids\u001B[38;5;241m=\u001B[39mids)\n\u001B[0;32m    578\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m chroma_collection\n",
+      "File \u001B[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\langchain\\vectorstores\\chroma.py:84\u001B[0m, in \u001B[0;36mChroma.__init__\u001B[1;34m(self, collection_name, embedding_function, persist_directory, client_settings, collection_metadata, client, relevance_score_fn)\u001B[0m\n\u001B[0;32m     82\u001B[0m     \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mchromadb\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mconfig\u001B[39;00m\n\u001B[0;32m     83\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mImportError\u001B[39;00m:\n\u001B[1;32m---> 84\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(\n\u001B[0;32m     85\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mCould not import chromadb python package. \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m     86\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mPlease install it with `pip install chromadb`.\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m     87\u001B[0m     )\n\u001B[0;32m     89\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m client \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m:\n\u001B[0;32m     90\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_client_settings \u001B[38;5;241m=\u001B[39m client_settings\n",
+      "\u001B[1;31mValueError\u001B[0m: Could not import chromadb python package. Please install it with `pip install chromadb`."
+     ]
+    }
+   ],
+   "source": [
+    "# 3. Store\n",
+    "vectorstore = Chroma.from_documents(documents=all_splits, embedding=OpenAIEmbeddings(openai_api_key=\"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\"))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-12T18:31:34.405706300Z",
+     "start_time": "2023-08-12T18:31:34.296401400Z"
+    }
+   },
+   "id": "e16dc9a3f43bccd5"
   }
  ],
  "metadata": {
