--- a/programming-task-2023/1. Noticias España/langchain_prueba.ipynb
+++ b/programming-task-2023/1. Noticias España/langchain_prueba.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-08-12T18:12:42.499314Z",
-     "start_time": "2023-08-12T18:12:41.692038Z"
+     "end_time": "2023-08-12T19:44:05.430480300Z",
+     "start_time": "2023-08-12T19:44:00.881088800Z"
     }
    },
    "outputs": [],
@@ -36,13 +36,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
-      "text/plain": "'El código INE del municipio de Agurain/Salvatierra, en España, es el 01002.'"
+      "text/plain": "'El código INE del municipio de Agurain/Salvatierra en España es el 01002.'"
      },
-     "execution_count": 39,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,8 +61,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-12T18:00:01.486749500Z",
-     "start_time": "2023-08-12T17:59:57.770760500Z"
+     "end_time": "2023-08-12T19:52:25.052061200Z",
+     "start_time": "2023-08-12T19:52:22.449397800Z"
     }
    },
    "id": "823eafa4329f0675"
@@ -272,31 +272,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "# Imports\n",
     "from langchain.document_loaders import DataFrameLoader\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "from langchain.embeddings import OpenAIEmbeddings\n",
-    "from langchain.vectorstores import Chroma"
+    "from langchain.vectorstores import Chroma\n",
+    "from langchain.chains import RetrievalQA\n",
+    "from langchain.chat_models import ChatOpenAI"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-12T18:26:56.600688200Z",
-     "start_time": "2023-08-12T18:26:56.594444400Z"
+     "end_time": "2023-08-12T19:56:36.495071200Z",
+     "start_time": "2023-08-12T19:56:36.472016900Z"
     }
    },
    "id": "2d40d81f22cc1b32"
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "# 1. Load\n",
-    "os.chdir(\"D:/1. Documentos/0. Bases de datos/0. Dofiles y Scripts/CNH-GitHub/programming-task-2023/1. Noticias España\")\n",
+    "os.chdir(\"C:/Users/User/Documents/GitHub/CNHGitHub/programming-task-2023/1. Noticias España\")\n",
     "df_completa = pd.read_excel(\"test_440_news_v11.xlsx\")\n",
     "df = df_completa.head(3)\n",
     "\n",
@@ -306,15 +308,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-12T18:25:35.437435Z",
-     "start_time": "2023-08-12T18:25:34.600472600Z"
+     "end_time": "2023-08-12T19:53:27.113758800Z",
+     "start_time": "2023-08-12T19:53:25.423928100Z"
     }
    },
    "id": "a581fa7f05b44723"
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "# 2. Split\n",
@@ -324,35 +326,16 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-12T18:26:31.563245900Z",
-     "start_time": "2023-08-12T18:26:31.544379300Z"
+     "end_time": "2023-08-12T19:53:29.158902400Z",
+     "start_time": "2023-08-12T19:53:29.138597Z"
     }
    },
    "id": "3280e30cd6036f0"
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Could not import chromadb python package. Please install it with `pip install chromadb`.",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
-      "File \u001B[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\langchain\\vectorstores\\chroma.py:81\u001B[0m, in \u001B[0;36mChroma.__init__\u001B[1;34m(self, collection_name, embedding_function, persist_directory, client_settings, collection_metadata, client, relevance_score_fn)\u001B[0m\n\u001B[0;32m     80\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[1;32m---> 81\u001B[0m     \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mchromadb\u001B[39;00m\n\u001B[0;32m     82\u001B[0m     \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mchromadb\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mconfig\u001B[39;00m\n",
-      "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'chromadb'",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001B[1;31mValueError\u001B[0m                                Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[78], line 2\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;66;03m# 3. Store\u001B[39;00m\n\u001B[1;32m----> 2\u001B[0m vectorstore \u001B[38;5;241m=\u001B[39m \u001B[43mChroma\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mfrom_documents\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdocuments\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mall_splits\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43membedding\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mOpenAIEmbeddings\u001B[49m\u001B[43m(\u001B[49m\u001B[43mopenai_api_key\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43msk-dHcL2e4kD94pPljDX4APT3BlbkFJim01oXldm27jCApbGBuE\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\langchain\\vectorstores\\chroma.py:613\u001B[0m, in \u001B[0;36mChroma.from_documents\u001B[1;34m(cls, documents, embedding, ids, collection_name, persist_directory, client_settings, client, collection_metadata, **kwargs)\u001B[0m\n\u001B[0;32m    611\u001B[0m texts \u001B[38;5;241m=\u001B[39m [doc\u001B[38;5;241m.\u001B[39mpage_content \u001B[38;5;28;01mfor\u001B[39;00m doc \u001B[38;5;129;01min\u001B[39;00m documents]\n\u001B[0;32m    612\u001B[0m metadatas \u001B[38;5;241m=\u001B[39m [doc\u001B[38;5;241m.\u001B[39mmetadata \u001B[38;5;28;01mfor\u001B[39;00m doc \u001B[38;5;129;01min\u001B[39;00m documents]\n\u001B[1;32m--> 613\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mcls\u001B[39m\u001B[38;5;241m.\u001B[39mfrom_texts(\n\u001B[0;32m    614\u001B[0m     texts\u001B[38;5;241m=\u001B[39mtexts,\n\u001B[0;32m    615\u001B[0m     embedding\u001B[38;5;241m=\u001B[39membedding,\n\u001B[0;32m    616\u001B[0m     metadatas\u001B[38;5;241m=\u001B[39mmetadatas,\n\u001B[0;32m    617\u001B[0m     ids\u001B[38;5;241m=\u001B[39mids,\n\u001B[0;32m    618\u001B[0m     collection_name\u001B[38;5;241m=\u001B[39mcollection_name,\n\u001B[0;32m    619\u001B[0m     persist_directory\u001B[38;5;241m=\u001B[39mpersist_directory,\n\u001B[0;32m    620\u001B[0m     client_settings\u001B[38;5;241m=\u001B[39mclient_settings,\n\u001B[0;32m    621\u001B[0m     client\u001B[38;5;241m=\u001B[39mclient,\n\u001B[0;32m    622\u001B[0m     collection_metadata\u001B[38;5;241m=\u001B[39mcollection_metadata,\n\u001B[0;32m    623\u001B[0m     \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs,\n\u001B[0;32m    624\u001B[0m )\n",
-      "File \u001B[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\langchain\\vectorstores\\chroma.py:568\u001B[0m, in \u001B[0;36mChroma.from_texts\u001B[1;34m(cls, texts, embedding, metadatas, ids, collection_name, persist_directory, client_settings, client, collection_metadata, **kwargs)\u001B[0m\n\u001B[0;32m    535\u001B[0m \u001B[38;5;129m@classmethod\u001B[39m\n\u001B[0;32m    536\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mfrom_texts\u001B[39m(\n\u001B[0;32m    537\u001B[0m     \u001B[38;5;28mcls\u001B[39m: Type[Chroma],\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m    547\u001B[0m     \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs: Any,\n\u001B[0;32m    548\u001B[0m ) \u001B[38;5;241m-\u001B[39m\u001B[38;5;241m>\u001B[39m Chroma:\n\u001B[0;32m    549\u001B[0m     \u001B[38;5;124;03m\"\"\"Create a Chroma vectorstore from a raw documents.\u001B[39;00m\n\u001B[0;32m    550\u001B[0m \n\u001B[0;32m    551\u001B[0m \u001B[38;5;124;03m    If a persist_directory is specified, the collection will be persisted there.\u001B[39;00m\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m    566\u001B[0m \u001B[38;5;124;03m        Chroma: Chroma vectorstore.\u001B[39;00m\n\u001B[0;32m    567\u001B[0m \u001B[38;5;124;03m    \"\"\"\u001B[39;00m\n\u001B[1;32m--> 568\u001B[0m     chroma_collection \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mcls\u001B[39m(\n\u001B[0;32m    569\u001B[0m         collection_name\u001B[38;5;241m=\u001B[39mcollection_name,\n\u001B[0;32m    570\u001B[0m         embedding_function\u001B[38;5;241m=\u001B[39membedding,\n\u001B[0;32m    571\u001B[0m         persist_directory\u001B[38;5;241m=\u001B[39mpersist_directory,\n\u001B[0;32m    572\u001B[0m         client_settings\u001B[38;5;241m=\u001B[39mclient_settings,\n\u001B[0;32m    573\u001B[0m         client\u001B[38;5;241m=\u001B[39mclient,\n\u001B[0;32m    574\u001B[0m         collection_metadata\u001B[38;5;241m=\u001B[39mcollection_metadata,\n\u001B[0;32m    575\u001B[0m         \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs,\n\u001B[0;32m    576\u001B[0m     )\n\u001B[0;32m    577\u001B[0m     chroma_collection\u001B[38;5;241m.\u001B[39madd_texts(texts\u001B[38;5;241m=\u001B[39mtexts, metadatas\u001B[38;5;241m=\u001B[39mmetadatas, ids\u001B[38;5;241m=\u001B[39mids)\n\u001B[0;32m    578\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m chroma_collection\n",
-      "File \u001B[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\langchain\\vectorstores\\chroma.py:84\u001B[0m, in \u001B[0;36mChroma.__init__\u001B[1;34m(self, collection_name, embedding_function, persist_directory, client_settings, collection_metadata, client, relevance_score_fn)\u001B[0m\n\u001B[0;32m     82\u001B[0m     \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mchromadb\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mconfig\u001B[39;00m\n\u001B[0;32m     83\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mImportError\u001B[39;00m:\n\u001B[1;32m---> 84\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(\n\u001B[0;32m     85\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mCould not import chromadb python package. \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m     86\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mPlease install it with `pip install chromadb`.\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m     87\u001B[0m     )\n\u001B[0;32m     89\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m client \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m:\n\u001B[0;32m     90\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_client_settings \u001B[38;5;241m=\u001B[39m client_settings\n",
-      "\u001B[1;31mValueError\u001B[0m: Could not import chromadb python package. Please install it with `pip install chromadb`."
-     ]
-    }
-   ],
+   "execution_count": 7,
+   "outputs": [],
    "source": [
     "# 3. Store\n",
     "vectorstore = Chroma.from_documents(documents=all_splits, embedding=OpenAIEmbeddings(openai_api_key=\"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\"))"
@@ -360,11 +343,65 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-12T18:31:34.405706300Z",
-     "start_time": "2023-08-12T18:31:34.296401400Z"
+     "end_time": "2023-08-12T19:54:44.955804400Z",
+     "start_time": "2023-08-12T19:54:41.592277500Z"
     }
    },
    "id": "e16dc9a3f43bccd5"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "4"
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "question = \"Indica de qué Ayuntamiento se habla en cada una las noticias indicadas. Genera un python dictionary\"\n",
+    "docs = vectorstore.similarity_search(question)\n",
+    "len(docs)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-12T20:10:55.567184Z",
+     "start_time": "2023-08-12T20:10:55.346024900Z"
+    }
+   },
+   "id": "676f898533e71a23"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'query': 'Indica de qué Ayuntamiento se habla en cada una las noticias indicadas. Genera un python dictionary',\n 'result': '{\\n  \"Noticia 1\": \"Ayuntamiento de Estepona\",\\n  \"Noticia 2\": \"Ayuntamiento de San Andrés del Rabanedo\",\\n  \"Noticia 3\": \"Ayuntamiento de Jerez de la Frontera\"\\n}'}"
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "llm = ChatOpenAI(model_name=\"gpt-3.5-turbo\", temperature=0, openai_api_key=\"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\")\n",
+    "qa_chain = RetrievalQA.from_chain_type(llm,retriever=vectorstore.as_retriever())\n",
+    "qa_chain({\"query\": question})"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-12T20:10:59.404452100Z",
+     "start_time": "2023-08-12T20:10:56.889890100Z"
+    }
+   },
+   "id": "a60a7f878e040835"
   }
  ],
  "metadata": {
