--- a/programming-task-2023/1. Noticias España/langchain_prueba.ipynb
+++ b/programming-task-2023/1. Noticias España/langchain_prueba.ipynb
@@ -351,40 +351,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "outputs": [
     {
      "data": {
       "text/plain": "4"
      },
-     "execution_count": 25,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "question = \"Indica de qué Ayuntamiento se habla en cada una las noticias indicadas. Genera un python dictionary\"\n",
+    "question = \"Indica de qué Ayuntamiento se habla en cada una las 3 noticias indicadas. Genera un python dictionary. Luego, para cada noticia, encuentra el código INE de cada ayuntamiento y genera otro python dictionary\"\n",
     "docs = vectorstore.similarity_search(question)\n",
     "len(docs)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-12T20:10:55.567184Z",
-     "start_time": "2023-08-12T20:10:55.346024900Z"
+     "end_time": "2023-08-12T20:22:56.027003300Z",
+     "start_time": "2023-08-12T20:22:55.778268500Z"
     }
    },
    "id": "676f898533e71a23"
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "outputs": [
     {
      "data": {
-      "text/plain": "{'query': 'Indica de qué Ayuntamiento se habla en cada una las noticias indicadas. Genera un python dictionary',\n 'result': '{\\n  \"Noticia 1\": \"Ayuntamiento de Estepona\",\\n  \"Noticia 2\": \"Ayuntamiento de San Andrés del Rabanedo\",\\n  \"Noticia 3\": \"Ayuntamiento de Jerez de la Frontera\"\\n}'}"
+      "text/plain": "{'query': 'Indica de qué Ayuntamiento se habla en cada una las 3 noticias indicadas. Genera un python dictionary. Luego, para cada noticia, encuentra el código INE de cada ayuntamiento y genera otro python dictionary',\n 'result': '1. Ayuntamiento de Estepona\\n2. Ayuntamiento de San Andrés del Rabanedo\\n3. Ayuntamiento no especificado\\n\\nCódigos INE:\\n1. Ayuntamiento de Estepona - 29047\\n2. Ayuntamiento de San Andrés del Rabanedo - 24115\\n3. Ayuntamiento no especificado - No se puede determinar el código INE sin más información.'}"
      },
-     "execution_count": 26,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,11 +397,41 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-12T20:10:59.404452100Z",
-     "start_time": "2023-08-12T20:10:56.889890100Z"
+     "end_time": "2023-08-12T20:23:01.417983900Z",
+     "start_time": "2023-08-12T20:22:57.370178100Z"
     }
    },
    "id": "a60a7f878e040835"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'query': 'Indica de qué Ayuntamiento se habla en cada una las noticias indicadas. Genera un python dictionary.',\n 'result': '{\\n  \"Noticia 1\": \"Ayuntamiento de Estepona\",\\n  \"Noticia 2\": \"Ayuntamiento de Jerez de la Frontera\",\\n  \"Noticia 3\": \"Ayuntamiento de San Andrés del Rabanedo\"\\n}'}"
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "question = \"Indica de qué Ayuntamiento se habla en cada una las noticias indicadas. Genera un python dictionary.\"\n",
+    "docs = vectorstore.similarity_search(question)\n",
+    "len(docs)\n",
+    "llm = ChatOpenAI(model_name=\"gpt-3.5-turbo\", temperature=0, openai_api_key=\"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\")\n",
+    "qa_chain = RetrievalQA.from_chain_type(llm,retriever=vectorstore.as_retriever())\n",
+    "qa_chain({\"query\": question})"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-12T20:23:40.864370300Z",
+     "start_time": "2023-08-12T20:23:37.831367100Z"
+    }
+   },
+   "id": "88c88003dcc37ee8"
   }
  ],
  "metadata": {
