--- a/CV/resume_CNH_eng.tex
+++ b/CV/resume_CNH_eng.tex
@@ -160,7 +160,7 @@ Atlas.ti & Intermediate\\
 \item \textbf{Consulting for the systematization of public management experiences or practices of the USAID Project: Institutional Strengthening of DEVIDA (FID) (Apr 2023 - Sep 2023).} {Consulting for the systematization of five public management experiences of the FID Project. The experiences prioritized by the FID Project were: i) strengthening of contracting management, ii) strengthening of producer organizations through the VEO tool, iii) promotion of obtaining financing in community organizations, iv) strengthening of investment management in municipalities and v) obtaining additional municipal resources for public investment. This work involved a documentary review and qualitative field work to identify strengths and opportunities for improvement in the five experiences prioritized by the FID Project.}
 \end{rSection} 
 %----------------------------------------------------------------------------------------
-
+\pagebreak
 \begin{rSection}{Publications}
 During my professional experience I have contributed to the following publications:
 \item Bustamante, P. (2022) \emph{La necesaria viabilidad social para el desarrollo sostenible de la minería}. En L. M. Castilla, J. Seinfield, N. Besich, C. Trivelli, J. Gallardo, A. Matsuda, . . . R. Valencia, \textit{Propuestas del Bicentenario: Rutas para el desarrollo regional} (págs. 215-241). Lima: Penguin Random House. Available \href{https://www.casadellibro.com/ebook-propuestas-del-bicentenario-ebook/9786125068026/13125397}{here.} 
