--- a/Data Perú/OSCE/informalidadEstado.ipynb
+++ b/Data Perú/OSCE/informalidadEstado.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-09-20T21:48:31.339173900Z",
-     "start_time": "2023-09-20T21:48:30.221875400Z"
+     "end_time": "2023-10-05T22:28:01.361547200Z",
+     "start_time": "2023-10-05T22:28:01.357031900Z"
     }
    },
    "outputs": [],
@@ -20,8 +20,9 @@
     "import numpy as np\n",
     "import requests\n",
     "from selenium import webdriver\n",
-    "from webdriver_manager.microsoft import EdgeChromiumDriverManager\n",
+    "from selenium.webdriver.chrome.service import Service\n",
     "\n",
+    "from selenium.webdriver.chrome.options import Options\n",
     "import time\n",
     "from selenium.webdriver.common.by import By\n",
     "import shutil\n",
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# Definimos las carpetas de trabajo\n",
@@ -41,15 +42,35 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-20T21:11:13.987319200Z",
-     "start_time": "2023-09-20T21:11:13.981177200Z"
+     "end_time": "2023-10-05T18:05:14.798852900Z",
+     "start_time": "2023-10-05T18:05:14.775600900Z"
     }
    },
    "id": "4fa1443f26a7bf65"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
+   "outputs": [],
+   "source": [
+    "# Scrappeo de la web del OSCE\n",
+    "# Definimos algunas opciones para abrir la página\n",
+    "service = Service()\n",
+    "options = webdriver.ChromeOptions()\n",
+    "driver = webdriver.Chrome(service=service, options=options)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-05T22:28:38.567299900Z",
+     "start_time": "2023-10-05T22:28:37.292289800Z"
+    }
+   },
+   "id": "f414596b778e53ed"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "outputs": [
     {
      "name": "stdout",
@@ -64,17 +85,72 @@
       "1_1_3_1\n",
       "1_1_3_2\n",
       "1_1_3_3\n",
-      "1_1_4_1\n"
+      "1_1_4_1\n",
+      "1_1_4_2\n",
+      "1_1_4_3\n",
+      "1_2_1_1\n",
+      "1_2_1_2\n",
+      "1_2_1_3\n",
+      "1_2_2_1\n",
+      "1_2_2_2\n",
+      "1_2_2_3\n",
+      "1_2_3_1\n",
+      "1_2_3_2\n",
+      "1_2_3_3\n",
+      "1_2_4_1\n",
+      "1_2_4_2\n",
+      "1_2_4_3\n",
+      "1_3_1_1\n",
+      "1_3_1_2\n",
+      "1_3_1_3\n",
+      "1_3_2_1\n",
+      "1_3_2_2\n",
+      "1_3_2_3\n",
+      "1_3_3_1\n",
+      "1_3_3_2\n",
+      "1_3_3_3\n",
+      "1_3_4_2\n",
+      "1_3_4_3\n",
+      "2_1_1_1\n",
+      "2_1_1_2\n",
+      "2_1_1_3\n",
+      "2_1_2_1\n",
+      "2_1_2_2\n",
+      "2_1_2_3\n",
+      "2_1_3_1\n",
+      "2_1_3_2\n",
+      "2_1_3_3\n",
+      "2_1_4_1\n",
+      "2_1_4_2\n",
+      "2_1_4_3\n",
+      "2_2_1_1\n",
+      "2_2_1_2\n",
+      "2_2_1_3\n",
+      "2_2_2_1\n",
+      "2_2_2_2\n",
+      "2_2_2_3\n",
+      "2_2_3_1\n",
+      "2_2_3_2\n",
+      "2_2_3_3\n",
+      "2_2_4_1\n",
+      "2_2_4_2\n",
+      "2_2_4_3\n",
+      "2_3_1_1\n",
+      "2_3_1_2\n",
+      "2_3_1_3\n",
+      "2_3_2_1\n",
+      "2_3_2_2\n",
+      "2_3_2_3\n",
+      "2_3_3_1\n",
+      "2_3_3_2\n"
      ]
     }
    ],
    "source": [
-    "# Scrappeo de la web del OSCE\n",
-    "# Definimos algunas opciones para abrir la página\n",
-    "driver = webdriver.Edge()\n",
-    "driver.maximize_window()\n",
     "\n",
     "# Abrimos la página\n",
+    "driver.maximize_window()\n",
+    "\n",
     "driver.get(\"https://bi.seace.gob.pe/pentaho/api/repos/%3Apublic%3Aportal%3Adatosabiertoscontratacionesdirectas.html/content?userid=public&password=key#\")\n",
     "\n",
     "# generamos un bucle para descargar todas las bases\n",
@@ -91,83 +167,90 @@
     "                    time.sleep(5)\n",
     "                    contador+=1\n",
     "                except:\n",
-    "                    continue\n",
-    "\n",
-    "# Movemos los archivos descargados a la carpeta de trabajo\n",
-    "time.sleep(120)"
+    "                    continue\n"
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true,
     "ExecuteTime": {
-     "start_time": "2023-09-20T21:48:36.691803800Z"
+     "end_time": "2023-10-05T22:36:03.294885200Z",
+     "start_time": "2023-10-05T22:28:41.706204Z"
     }
    },
    "id": "b63fbcd2ac6d4f20"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "# Seteamos la carpeta donde originalmente se descargaron los archivos\n",
-    "folder_path = \"C:/Users/canun/Downloads\"\n",
+    "downloadPath = r\"C:\\Users\\User\\Downloads\"\n",
     "\n",
     "# Generamos una lista que permita identificar los archivos de la carpeta y las fechas de modificación\n",
-    "files_with_time = [(f, os.path.getmtime(os.path.join(folder_path, f))) for f in os.listdir(folder_path)]\n",
+    "filesWithTime = [(f, os.path.getmtime(os.path.join(downloadPath, f))) for f in os.listdir(downloadPath)]\n",
     "\n",
     "# Ordenamos de tal forma que los primeros archivos de la lista sean los más recientes\n",
-    "sorted_files = sorted(files_with_time, key=lambda x: x[1], reverse=True)\n",
+    "sortedFiles = sorted(filesWithTime, key=lambda x: x[1], reverse=True)\n",
     "\n",
     "# Generamos una lista de solo los datos descargados\n",
-    "locals()[f'last_{contador}_files'] = [f[0] for f in sorted_files[:contador]]\n",
+    "locals()[f'last_{contador}_files'] = [f[0] for f in sortedFiles[:contador]]\n",
     "\n",
     "# Movemos los archivos descargados a la carpeta de trabajo\n",
     "for file in locals()[f'last_{contador}_files']:\n",
     "\n",
     "    # Path of the file to be moved\n",
-    "    src_file = \"C:/Users/canun/Downloads/\" + file\n",
+    "    srcFile = \"C:/Users/User/Downloads/\" + file\n",
     "\n",
     "    # Destination path where the file should be moved\n",
-    "    dst_folder = \"D:/1. Documentos/0. Bases de datos/10. OSCE\"\n",
+    "    pathRaw8UIT = r'C:\\Users\\User\\OneDrive - Universidad del Pacífico\\1. Documentos\\0. Bases de datos\\10. OSCE\\0. Originales\\Menores de 8 UIT'\n",
     "\n",
     "    # Move the file from the source path to the destination path\n",
-    "    shutil.move(src_file, dst_folder)\n",
-    "\n",
-    "# Extraemos las bases de datos de todos los archivos descargados\n",
-    "# Generamos un código para generar la lista de archivos\n",
-    "\n",
-    "folder_path = \"D:/1. Documentos/0. Bases de datos/10. OSCE\""
+    "    shutil.move(srcFile, pathRaw8UIT)\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-05T22:57:49.665433600Z",
+     "start_time": "2023-10-05T22:57:49.551735100Z"
+    }
    },
    "id": "f4ece8d5298525dd"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 25,
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 2] El sistema no puede encontrar el archivo especificado: 'CONOSCE_ORDENESCOMPRAABRIL2018_0.xlsx'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mFileNotFoundError\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[25], line 15\u001B[0m\n\u001B[0;32m     13\u001B[0m     servicios \u001B[38;5;241m=\u001B[39m df[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mTIPOORDEN\u001B[39m\u001B[38;5;124m'\u001B[39m] \u001B[38;5;241m==\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mOrden de Servicio\u001B[39m\u001B[38;5;124m'\u001B[39m\n\u001B[0;32m     14\u001B[0m     df \u001B[38;5;241m=\u001B[39m df[servicios]\n\u001B[1;32m---> 15\u001B[0m     \u001B[43mos\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mremove\u001B[49m\u001B[43m(\u001B[49m\u001B[43mfile\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m     16\u001B[0m     contador_1\u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1\u001B[39m\n\u001B[0;32m     17\u001B[0m \u001B[38;5;28;01melse\u001B[39;00m:\n",
+      "\u001B[1;31mFileNotFoundError\u001B[0m: [WinError 2] El sistema no puede encontrar el archivo especificado: 'CONOSCE_ORDENESCOMPRAABRIL2018_0.xlsx'"
+     ]
+    }
+   ],
    "source": [
-    "'''\n",
     "# Armado de la base de datos\n",
     "\n",
     "# Generamos una lista que permita identificar los archivos de la carpeta y las fechas de modificación\n",
     "\n",
-    "files_list = os.listdir(pathRawData)\n",
-    "os.chdir(\"D:/1. Documentos/0. Bases de datos/10. OSCE\")\n",
+    "files_list = os.listdir(pathRaw8UIT)\n",
+    "os.chdir(pathData)\n",
     "contador_1=0\n",
     "\n",
     "#for file in locals()[f'last_{contador}_files']:\n",
     "for file in files_list:\n",
     "    if contador_1==0 :\n",
-    "        df = pd.read_excel(file, skiprows=1)\n",
+    "        df = pd.read_excel(pathRaw8UIT + \"/\" + file, skiprows=1)\n",
     "        servicios = df['TIPOORDEN'] == 'Orden de Servicio'\n",
     "        df = df[servicios]\n",
     "        os.remove(file)\n",
     "        contador_1+=1\n",
     "    else:\n",
-    "        df_alterna = pd.read_excel(file, skiprows=1)\n",
+    "        df_alterna = pd.read_excel(pathRaw8UIT + \"/\" + file, skiprows=1)\n",
     "        servicios = df_alterna['TIPOORDEN'] == 'Orden de Servicio'\n",
     "        df_alterna = df_alterna[servicios]\n",
     "        df = pd.concat([df, df_alterna])\n",
@@ -175,12 +258,14 @@
     "        contador_1+=1\n",
     "\n",
     "# Guardamos la base de datos\n",
-    "df.to_csv('df_servicios_2018_2023.csv')\n",
-    "\n",
-    "'''"
+    "df.to_csv('df_servicios_2018_2023.csv')\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-05T23:02:49.805283200Z",
+     "start_time": "2023-10-05T23:01:02.057942600Z"
+    }
    },
    "id": "5d17e7d2455b2f4b"
   },
